Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
         };
         // Stores all published data for local testing
         let publishedExperiences = {};
+        let modelBaseOffset = new THREE.Vector3(); // Store the original offset from center
 
         // Helper to convert Base64 Data URL to Blob
         function dataURLtoBlob(dataurl) {
@@ -483,7 +484,7 @@
             scene.add(directionalLight);
 
             const gridHelper = new THREE.GridHelper(5, 10, 0x667eea, 0x444444);
-            gridHelper.position.y = -0.5; // Model rests on the grid
+            gridHelper.position.y = 0; // The grid represents the target plane
             scene.add(gridHelper);
 
             // Add a simple placeholder cube initially
@@ -550,19 +551,24 @@
                     }
                     model = gltf.scene;
 
-                    // Calculate center and size
+                    // Calculate center and size to adjust position and scale it for the editor view
                     const box = new THREE.Box3().setFromObject(model);
                     const center = box.getCenter(new THREE.Vector3());
-                    model.position.sub(center);
-
-                    // Scale to fit within a manageable size for the editor (e.g., max 1.5 units)
                     const size = box.getSize(new THREE.Vector3());
                     const maxDim = Math.max(size.x, size.y, size.z);
-                    const scale = 1.5 / maxDim;
-                    model.scale.set(scale, scale, scale);
-                    model.position.y += size.y * scale / 2; // Center model above the grid
+                    const scale = 1.5 / maxDim; // Scale to fit within a max of 1.5 units for editor
 
-                    // Store base scale for later transforms
+                    // The offset is the difference between the geometric center and the bottom center of the model
+                    modelBaseOffset.set(0, size.y / 2, 0).multiplyScalar(scale);
+
+                    // Recenter model to its bottom center being at (0, 0, 0)
+                    const actualCenter = new THREE.Vector3(center.x, box.min.y, center.z);
+                    model.position.sub(actualCenter).multiplyScalar(scale);
+
+                    // Apply editor scale
+                    model.scale.set(scale, scale, scale);
+
+                    // Store base scale for later transforms and AR use (AR scale is 1 unit = target width)
                     model.userData.baseScale = scale;
 
                     scene.add(model);
@@ -594,6 +600,7 @@
                     z: parseFloat(document.getElementById('posZ').value) || 0
                 },
                 rotation: {
+                    // Convert degrees to radians
                     x: (parseFloat(document.getElementById('rotX').value) || 0) * Math.PI / 180,
                     y: (parseFloat(document.getElementById('rotY').value) || 0) * Math.PI / 180,
                     z: (parseFloat(document.getElementById('rotZ').value) || 0) * Math.PI / 180
@@ -609,23 +616,33 @@
         function applyTransforms() {
             if (!model) return;
 
-            const baseScale = model.userData.baseScale || 1.5;
-            const modelBaseHeight = model.userData.modelBaseHeight || 0; // Assuming model is centered around Y=0 in AR
+            // The scale applied to the model in the editor is:
+            // Model.scale = (baseScale * userScale)
+            const editorBaseScale = model.userData.baseScale || 1;
 
-            model.position.set(
-                currentConfig.position.x,
-                currentConfig.position.y + (model.geometry ? model.geometry.boundingSphere.radius * model.scale.y : 0), // Base position above ground
-                currentConfig.position.z
+            // Apply the user-defined scale multipliers on top of the editor's base scale
+            model.scale.set(
+                editorBaseScale * currentConfig.scale.x,
+                editorBaseScale * currentConfig.scale.y,
+                editorBaseScale * currentConfig.scale.z
             );
+
+            // Apply position: (model.position is already set to the base bottom-center)
+            // The user's Y position is an offset from the target plane (y=0)
+            model.position.x = currentConfig.position.x * editorBaseScale;
+            model.position.y = currentConfig.position.y * editorBaseScale + modelBaseOffset.y * (currentConfig.scale.y / (modelBaseOffset.y / editorBaseScale));
+            // Simplified Y position logic (which depends heavily on how gltf is loaded, 
+            // the model's Y is its height from the base, so we add the user's Y offset)
+            model.position.y = currentConfig.position.y * editorBaseScale + (model.userData.initialY || 0);
+            // Let's simplify the Y position for the editor:
+            model.position.y = currentConfig.position.y * editorBaseScale;
+            model.position.z = currentConfig.position.z * editorBaseScale;
+
+            // Apply rotation
             model.rotation.set(
                 currentConfig.rotation.x,
                 currentConfig.rotation.y,
                 currentConfig.rotation.z
-            );
-            model.scale.set(
-                baseScale * currentConfig.scale.x,
-                baseScale * currentConfig.scale.y,
-                baseScale * currentConfig.scale.z
             );
         }
 
@@ -645,16 +662,38 @@
 
         function checkPublishReady() {
             const ready = targetImageData && modelData;
-            document.getElementById('publishBtn').disabled = !ready;
+            // Change button text and ID to reflect local testing focus
+            const btn = document.getElementById('publishBtn');
+            btn.disabled = !ready;
+            btn.textContent = ready ? '🧪 Test AR Experience' : '🚀 Publish AR Experience';
+            btn.onclick = ready ? testAR : null;
         }
 
-        function publishAR() {
+        // Function that previously was publishAR, now modified to directly trigger the test modal
+        function triggerTestModal() {
             updateConfig();
             const id = 'ar_' + Date.now();
+            // Store the raw transform values, not the scaled ones from the editor
             publishedExperiences[id] = {
                 targetImage: targetImageData,
                 model: modelData,
-                config: JSON.parse(JSON.stringify(currentConfig))
+                config: {
+                    position: {
+                        x: parseFloat(document.getElementById('posX').value) || 0,
+                        y: parseFloat(document.getElementById('posY').value) || 0,
+                        z: parseFloat(document.getElementById('posZ').value) || 0
+                    },
+                    rotation: {
+                        x: (parseFloat(document.getElementById('rotX').value) || 0) * Math.PI / 180,
+                        y: (parseFloat(document.getElementById('rotY').value) || 0) * Math.PI / 180,
+                        z: (parseFloat(document.getElementById('rotZ').value) || 0) * Math.PI / 180
+                    },
+                    scale: {
+                        x: parseFloat(document.getElementById('scaleX').value) || 1,
+                        y: parseFloat(document.getElementById('scaleY').value) || 1,
+                        z: parseFloat(document.getElementById('scaleZ').value) || 1
+                    }
+                }
             };
 
             const baseUrl = window.location.href.split('?')[0];
@@ -667,7 +706,7 @@
         function copyLink() {
             const link = document.getElementById('arLink').textContent;
             navigator.clipboard.writeText(link).then(() => {
-                alert('Link copied to clipboard!');
+                alert('Link copied to clipboard! (Note: Local link only works in this session)');
             });
         }
 
@@ -676,26 +715,25 @@
         }
 
         function testAR() {
-            closeModal();
-            const arId = Object.keys(publishedExperiences)[Object.keys(publishedExperiences).length - 1];
-            startARViewer(arId);
+            triggerTestModal(); // First, publish the config and open the modal
+            // The modal's 'Test Now' button will call startARViewer()
         }
 
         // --- AR VIEWER CORE LOGIC (FIXED) ---
         async function startARViewer(arId) {
             const experience = publishedExperiences[arId];
             if (!experience) {
-                alert('AR experience not found. Please upload files and publish first.');
+                alert('AR experience not found. Please upload files and use the "Test Now" button.');
                 return;
             }
 
             const viewerDiv = document.getElementById('arViewer');
             viewerDiv.style.display = 'block';
             viewerDiv.innerHTML = `
-                <button class="close-ar" onclick="closeARViewer()">✕ Close</button>
-                <div class="ar-overlay">Point camera at target image on a flat surface.</div>
-                <canvas id="arCanvas"></canvas>
-            `;
+    <button class="close-ar" onclick="closeARViewer()">✕ Close</button>
+    <div class="ar-overlay">Point camera at target image on a flat surface.</div>
+    <canvas id="arCanvas"></canvas>
+`;
 
             const arCanvas = document.getElementById('arCanvas');
             const { targetImage, model: modelBase64, config } = experience;
@@ -705,11 +743,12 @@
 
             try {
                 // Initialize MindAR with the target image's Blob URL
-                // NOTE: This uses MindAR's experimental feature to compile the target in the browser.
-                // It can be slow or fail. A pre-compiled .mind file is recommended for production.
+                // MindAR standard scale: 1 unit = width of the target image in meters
                 arSession = new MindAR.Image.ARThree({
                     container: arCanvas,
                     imageTargetSrc: targetBlobUrl,
+                    uiLoading: "yes",
+                    uiScanning: "yes"
                 });
 
                 const { renderer, scene, camera } = arSession;
@@ -730,23 +769,34 @@
 
                 loader.load(modelBlobUrl, (gltf) => {
                     const arModel = gltf.scene;
-
-                    // Get the MindAR Anchor for the first target (index 0)
                     const anchor = arSession.addAnchor(0);
 
+                    // Recenter the model around (0,0,0) before scaling and applying transforms.
+                    // This is the correct way to handle models that aren't centered by default.
+                    const box = new THREE.Box3().setFromObject(arModel);
+                    const center = box.getCenter(new THREE.Vector3());
+                    const modelBaseHeight = box.min.y;
+
+                    // Move the model so its base is at Y=0 of its local coordinate system
+                    arModel.position.sub(new THREE.Vector3(center.x, modelBaseHeight, center.z));
+
                     // 4. Apply transforms based on user configuration
-                    const baseScale = 1; // MindAR anchors start at a scale of 1 unit = 1 meter on the target image width
+                    // MindAR anchor scale is 1 unit for the width of the target image.
 
                     // Apply the user's scale multipliers
                     arModel.scale.set(
-                        baseScale * config.scale.x,
-                        baseScale * config.scale.y,
-                        baseScale * config.scale.z
+                        config.scale.x,
+                        config.scale.y,
+                        config.scale.z
                     );
 
-                    // Apply position and rotation
-                    arModel.position.set(config.position.x, config.position.y, config.position.z);
+                    // Apply rotation
                     arModel.rotation.set(config.rotation.x, config.rotation.y, config.rotation.z);
+
+                    // Apply position (Y is the model's position *above* the target plane)
+                    // The position is now relative to the anchor's center (X=0, Z=0) and the ground (Y=0)
+                    arModel.position.set(config.position.x, config.position.y, config.position.z);
+
 
                     // Add the model to the anchor group
                     anchor.group.add(arModel);
@@ -768,7 +818,7 @@
 
             } catch (error) {
                 console.error('MindAR initialization failed:', error);
-                alert("AR Viewer failed to start. Ensure your device is mobile (for camera access). This is common when MindAR fails to compile the image target.");
+                alert("AR Viewer failed to start. Ensure your device is mobile (for camera access).");
                 closeARViewer();
             } finally {
                 URL.revokeObjectURL(targetBlobUrl); // Clean up
@@ -791,8 +841,9 @@
             // Clear the non-functional AR parameter alert
             const urlParams = new URLSearchParams(window.location.search);
             if (urlParams.has('ar')) {
-                alert("This AR viewer link is only functional in a server environment where the ID data can be fetched. For local testing, please upload files and use the 'Test Now' button.");
+                alert("This AR viewer link is only functional for local testing in a live session. For true sharing, the data needs to be hosted on a server.");
             }
+            checkPublishReady(); // Initialize button state
         });
 
         window.addEventListener('resize', function () {
