--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>MindAR Image Target Scene Editor</title>
+    <title>pindAR Image Target Scene Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -402,3 +402,4 @@
 </body>
 
 </html>
+
