--- a/lookat.html
+++ b/lookat.html
@@ -41,7 +41,7 @@
         // --- 1. CONFIGURATION: EDIT THESE VALUES ---
 
         // IMPORTANT: Put your .glb file online and paste the URL here.
-        const MODEL_URL = "https://mgcode03.github.io/Gkmodel.glb"; // <-- Replace with your model URL
+        const MODEL_URL = "Gkmodel.glb"; // <-- Replace with your model URL
 
         // --- Bone Names (Check your Avaturn model!) ---
         const HEAD_BONE_NAME = "Head";      // Avaturn default
@@ -169,5 +169,6 @@
         animate();
     </script>
 </body>
+
 
 </html>
