--- a/lookat.html
+++ b/lookat.html
@@ -41,14 +41,14 @@
         // --- 1. CONFIGURATION: EDIT THESE VALUES ---
 
         // IMPORTANT: Put your .glb file online and paste the URL here.
-        const MODEL_URL = "Gkmodel.glb"; // <-- Replace with your model URL
+        const MODEL_URL = "Gkmodel.glb";
 
         // --- Bone Names (Check your Avaturn model!) ---
         const HEAD_BONE_NAME = "Head";      // Avaturn default
         const SPINE_BONE_NAME = "Spine2";   // Avaturn default
 
         // --- Look At Strength ---
-        const MAX_YAW_ANGLE = 30;    // Max degrees left/right
+        const MAX_YAW_ANGLE = 45;    // Max degrees left/right
         const MAX_PITCH_ANGLE = 20;  // Max degrees up/down
         const SMOOTHING = 0.05;      // How fast the head follows (0.01 = slow, 0.1 = fast)
 
@@ -57,18 +57,39 @@
         const SPINE_PITCH_INFLUENCE = 0.5; // 50% of up/down
 
         // --- Model Position & Scale ---
-        const MODEL_SCALE = 2.0;
-        const MODEL_POS_Y = -1.7; // Move model down to ground it (adjust as needed)
+        const MODEL_SCALE = 1.8;
+        const MODEL_POS_Y = -1; // Move model down to ground it (adjust as needed)
+
+        // --- NEW: Camera Intro Transition ---
+        const CAMERA_TRANSITION_DURATION = 8; // Duration in seconds
+
+        // Start Position (Closer)
+        const START_CAM_X = 0;
+        const START_CAM_Y = 2.1;
+        const START_CAM_Z = 1.5;
+
+        // End Position (Final)
+        const END_CAM_X = 0;
+        const END_CAM_Y = 1.4;
+        const END_CAM_Z = 2.5;
         // ---------------------------------------------
 
         let scene, camera, renderer, headBone, spineBone, mixer, clock;
         let mousePos = new THREE.Vector2();
 
+        // --- NEW: Camera transition variables ---
+        let transitionTimer = 0.0;
+        const startCamPos = new THREE.Vector3(START_CAM_X, START_CAM_Y, START_CAM_Z);
+        const endCamPos = new THREE.Vector3(END_CAM_X, END_CAM_Y, END_CAM_Z);
+
+
         // 1. Setup the Scene
         scene = new THREE.Scene();
         clock = new THREE.Clock(); // For animations
         camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 1.4, 2.5); // x, y, z position of the camera
+
+        // **MODIFIED:** Set camera to the start position
+        camera.position.copy(startCamPos);
 
         renderer = new THREE.WebGLRenderer({
             antialias: true,
@@ -96,17 +117,12 @@
             headBone = gltf.scene.getObjectByName(HEAD_BONE_NAME);
             spineBone = gltf.scene.getObjectByName(SPINE_BONE_NAME);
 
-            if (!headBone) {
-                console.error(`Error: Could not find bone named "${HEAD_BONE_NAME}"`);
-            }
-            if (!spineBone) {
-                console.warn(`Warning: Could not find bone named "${SPINE_BONE_NAME}"`);
-            }
+            if (!headBone) console.error(`Error: Could not find bone named "${HEAD_BONE_NAME}"`);
+            if (!spineBone) console.warn(`Warning: Could not find bone named "${SPINE_BONE_NAME}"`);
 
             // --- Setup Animation ---
             if (gltf.animations.length > 0) {
                 mixer = new THREE.AnimationMixer(gltf.scene);
-                // Play the *first* animation found in the file
                 const action = mixer.clipAction(gltf.animations[0]);
                 action.play();
             } else {
@@ -130,12 +146,25 @@
             requestAnimationFrame(animate);
             const delta = clock.getDelta(); // Get time since last frame
 
+            // --- NEW: Camera Transition Logic ---
+            // This runs for the first 2.5 seconds (or whatever DURATION is)
+            if (transitionTimer < CAMERA_TRANSITION_DURATION) {
+                transitionTimer += delta;
+                let progress = Math.min(transitionTimer / CAMERA_TRANSITION_DURATION, 1.0);
+
+                // Add a smooth ease-out (cubic)
+                let easedProgress = progress < 0.5
+                ? 4 * progress * progress * progress
+                : 1 - Math.pow(-2 * progress + 2, 3) / 2;
+
+                camera.position.lerpVectors(startCamPos, endCamPos, easedProgress);
+            }
+            // --- End Camera Transition ---
+
+
             // Calculate target rotation in radians
             const targetYaw = mousePos.x * THREE.MathUtils.degToRad(MAX_YAW_ANGLE);
-
-            // **FIXED:** Flipped the sign. 
-            // Positive mouse Y (top) now equals positive pitch (look up).
-            const targetPitch = -mousePos.y * THREE.MathUtils.degToRad(MAX_PITCH_ANGLE);
+            const targetPitch = -mousePos.y * THREE.MathUtils.degToRad(MAX_PITCH_ANGLE); // Inverted Y
 
             // --- Apply rotations with smoothing (Lerp) ---
             if (headBone) {
@@ -143,13 +172,12 @@
                 headBone.rotation.x = THREE.MathUtils.lerp(headBone.rotation.x, targetPitch, SMOOTHING);
             }
 
-            // **NEW:** Apply influenced rotation to the spine
             if (spineBone) {
                 spineBone.rotation.y = THREE.MathUtils.lerp(spineBone.rotation.y, targetYaw * SPINE_YAW_INFLUENCE, SMOOTHING);
                 spineBone.rotation.x = THREE.MathUtils.lerp(spineBone.rotation.x, targetPitch * SPINE_PITCH_INFLUENCE, SMOOTHING);
             }
 
-            // **NEW:** Update the animation mixer
+            // Update the animation mixer
             if (mixer) {
                 mixer.update(delta);
             }
@@ -169,6 +197,5 @@
         animate();
     </script>
 </body>
-
 
 </html>
