--- a/lookat2.html
+++ b/lookat2.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <img id="custom-cursor" src="water.png">
+    <img id="custom-cursor" src="water.webp">
     <script type="importmap">
     {
         "imports": {
@@ -237,5 +237,6 @@
         animate();
     </script>
 </body>
+
 
 </html>
