Change custom cursor image format from webp to png
Updated custom cursor image from 'water.webp' to 'water.png'.

--- a/lookat2.html
+++ b/lookat2.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <img id="custom-cursor" src="water.webp">
+    <img id="custom-cursor" src="water.png">
     <script type="importmap">
     {
         "imports": {
@@ -240,3 +240,4 @@
 
 
 </html>
+
